# node

./: .gitmodules  ALT_LEDGER_2030_CREDITS_ARCHITECTURE.md  CMakeLists.txt  README.md  WEBSOCKET_API.md  blockchain_diff.txt  encrypted.txt  sync_to_wsl.sh  tag_log_channels.py  test.txt
api/: CMakeLists.txt
api/include/: apihandler.hpp  dumbcv.hpp  executor.hpp
api/include/csconnector/: csconnector.hpp
api/include/websocket/: websockethandler.hpp  websocketserver.hpp
api/src/: apihandler.cpp  csconnector.cpp  executor.cpp  tokens.cpp  websockethandler.cpp  websocketserver.cpp
client/: CMakeLists.txt
client/config/: config.cpp  config.hpp  observer.cpp
client/include/client/: params.hpp
client/src/: peer.cpp
credits-alt-ledger-2030/: BUILD_WINDOWS.md  CMakeLists.txt  COMPILATION_FIXES_APPLIED.md  MANUAL_BUILD.md  NODE_NETWORKING_GUIDE.md  QUICK_FIX_WINDOWS.md  QUICK_START.md  README.md  README_SCRIPTS.md  README_STANDALONE.md  RUN_SIMPLE_NODE.md  check_fixes.sh  debug_build.bat  debug_lib.bat  final_check.sh  test_build.bat  test_compilation.md  test_corrected_build.bat  test_final_build.bat  test_fixed_build.bat  test_imports.bat  test_lib_only.bat  test_progressive.bat  test_simple_build.bat  test_syntax.sh
credits-alt-ledger-2030/agent/go/: agent_chain.go  cross_agent.go  go.mod  go.sum  main.go
credits-alt-ledger-2030/common/include/: array_hash.hpp
credits-alt-ledger-2030/contracts/: CMakeLists.txt
credits-alt-ledger-2030/contracts/include/: wasm_executor.hpp
credits-alt-ledger-2030/contracts/src/: wasm_executor.cpp
credits-alt-ledger-2030/core/: CMakeLists.txt  Cargo.toml  Cargo.windows.toml  build.rs
credits-alt-ledger-2030/core/data/: wallet.json
credits-alt-ledger-2030/core/data_node4/dag/: db
credits-alt-ledger-2030/core/src/: consensus.rs  dag_vertex.rs  error.rs  ffi.rs  lib.rs  main.rs  main_simple.rs  network.rs  rpc.rs  shard.rs  storage.rs  storage_unified.rs  storage_windows.rs
credits-alt-ledger-2030/core/test-network-20257/02-221655/: bootstrap.json
credits-alt-ledger-2030/core/test-network-20257/02-221655/node1/: config.toml
credits-alt-ledger-2030/core/test-network-20257/02-221655/node2/: config.toml
credits-alt-ledger-2030/data/dag/: db  snap.0000000000000341
credits-alt-ledger-2030/dev/: check-deps.bat  clean-build.bat  quick-build.bat
credits-alt-ledger-2030/examples/: QUICK_START.md  README.md
credits-alt-ledger-2030/examples/agent-node/: clean-data.bat  config.toml  start.bat
credits-alt-ledger-2030/examples/bootstrap-node/: config.toml  start.bat
credits-alt-ledger-2030/examples/network-cluster/: clean-data.bat  start-cluster.bat
credits-alt-ledger-2030/examples/network-cluster/node1/: config.toml
credits-alt-ledger-2030/examples/network-cluster/node2/: config.toml
credits-alt-ledger-2030/examples/network-cluster/node3/: config.toml
credits-alt-ledger-2030/examples/network-cluster/node4/: config.toml  genesis.json
credits-alt-ledger-2030/examples/single-node/: README.md  clean-data.bat  config.toml  start.bat  start.sh
credits-alt-ledger-2030/examples/two-nodes/: README.md  bootstrap.json  clean-data.bat  start-network.bat
credits-alt-ledger-2030/examples/two-nodes/node1/: config.toml  start.bat
credits-alt-ledger-2030/examples/two-nodes/node1/data/: wallet.json
credits-alt-ledger-2030/examples/two-nodes/node1/data/dag/: db  snap.00000000000001AB
credits-alt-ledger-2030/examples/two-nodes/node2/: bootstrap.json  config.toml  start.bat
credits-alt-ledger-2030/examples/two-nodes/node2/data/: wallet.json
credits-alt-ledger-2030/examples/two-nodes/node2/data/dag/: db
credits-alt-ledger-2030/networking/: CMakeLists.txt
credits-alt-ledger-2030/networking/include/: ctdp_v2_transport.hpp
credits-alt-ledger-2030/networking/src/: ctdp_v2_transport.cpp
credits-alt-ledger-2030/scripts/: build.bat  build.ps1  build.sh  debug.bat  run_node.bat  run_node.sh  start-network.bat  test.bat
csdb/: CMakeLists.txt
csdb/include/csdb/: database.hpp  database_berkeleydb.hpp  database_rocksdb.hpp  empty_pool_stub.hpp  pool.hpp  storage.hpp
csdb/src/: address.cpp  amount.cpp  amount_commission.cpp  binary_streams.cpp  csdb.cpp  currency.cpp  database.cpp  database_berkeleydb.cpp  database_rocksdb.cpp  integral_encdec.cpp  pool.cpp  priv_crypto.cpp  storage.cpp  transaction.cpp  user_field.cpp  utils.cpp  wallet.cpp
csnode/: CMakeLists.txt
csnode/include/csnode/: anchorblock.hpp  bitheap.hpp  blockchain.hpp  caches_serialization_manager.hpp  chain_integrity.hpp  (+15 more)
csnode/src/: anchorblock.cpp  apihandler_serializer.cpp  blockchain.cpp  blockchain_serializer.cpp  blockhashes.cpp  blockvalidatorplugins.cpp  caches_serialization_manager.cpp  chain_integrity.cpp  eventreport.cpp  forktracker.cpp  itervalidator.cpp  multiwallets.cpp  node.cpp  ordinal_json_parser.cpp  ordinalindex.cpp  poolcache.cpp  poolsynchronizer.cpp  roundstat_serializer.cpp  smartcontracts_serializer.cpp  syncwatchdog.cpp  tokens_serializer.cpp  transactionsindex.cpp  walletscache.cpp  walletscache_serializer.cpp  walletsids_serializer.cpp
example/: config.ini
example/new/: config.ini
lmdbxx/: lmdb.hpp
net/src/: neighbourhood.cpp  networkcommands.cpp  packet.cpp  packetsqueue.cpp  packetvalidator.cpp  transport.cpp
nodeDocs/: CONSENSUS_PARAMETER_AUDIT.md
solver/src/: smartconsensus.cpp  smartcontracts.cpp  solvercore.cpp  solverinterface.cpp
tests/csnode/: clientconfigmock.hpp
tools/: compare_contracts.py
tools/chain_integrity/: CMakeLists.txt
tools/chain_integrity/src/: main.cpp
tools/csdb_migrate/: CMakeLists.txt
tools/csdb_migrate/src/: main.cpp
tools/dump_consensus_state/: CMakeLists.txt
tools/dump_consensus_state/src/: main.cpp
tools/jvm_embed_spike/: CMakeLists.txt
tools/jvm_embed_spike/include/jvm_embed/: jvm_embed.hpp
tools/jvm_embed_spike/java/: EmbeddedExecutorBridge.java  HelloEmbed.java  StubExecutor.java
tools/jvm_embed_spike/src/: jvm_embed.cpp  main.cpp
tools/state_audit/: CMakeLists.txt
tools/state_audit/src/: main.cpp
tools/tps_gen/: requirements.txt  tps_gen.py
(+27 files in other folders)
