[package]
name = "dag_engine"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "dag_engine"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "credits-node"
path = "src/main.rs"

[[bin]]
name = "credits-node-enhanced"
path = "src/main.rs"

[[bin]]
name = "simple-node"
path = "src/main_simple.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
blake3 = "1.4"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
thiserror = "1.0"
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.7"
uuid = { version = "1.0", features = ["v4"] }
dashmap = "5.4"
lru = "0.11"

# BLS signature support
bls12_381 = "0.8"
group = "0.13"

# Serialization support
rmp-serde = "1.1"
serde_json = "1.0"

# Database backends (optional)
rocksdb = { version = "0.21", optional = true }
sled = { version = "0.34", optional = true }

# Additional dependencies
env_logger = "0.10"
serde-big-array = "0.5"
tempfile = "3.0"

# Networking dependencies
hyper = { version = "0.14", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"

# Additional dependencies for enhanced node
log = "0.4"
rand = "0.8"
hex = "0.4"


[build-dependencies]
cbindgen = "0.24"

[features]
default = ["sled-backend"]
rocksdb-backend = ["rocksdb"]
sled-backend = ["sled"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"